# dycore_stencils

./: CMakeLists.txt  Definitions.hpp  LICENSE.md  domain.hpp  functions.hpp  horizontal_diffusion.cu  horizontal_diffusion.h  horizontal_diffusion_benchmark.cu  horizontal_diffusion_reference.hpp  repository.hpp  timer.hpp  timer_cuda.hpp  utils.h  utils.hpp  verifier.hpp
fast_waves_uv/: CMakeLists.txt  fast_waves_uv_benchmark.cu  fast_waves_uv_reference.hpp
horizontal_diffusion/: CMakeLists.txt  horizontal_diffusion.cu  horizontal_diffusion.h  horizontal_diffusion_benchmark.cu  horizontal_diffusion_reference.hpp
vertical_advection/: CMakeLists.txt  functions.hpp  vertical_advection.cu  vertical_advection.h  vertical_advection_benchmark.cu  vertical_advection_reference.hpp  vertical_advection_split.cu
